--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body>
 
         <ul>
-            <li><a title="Check-list" href="preparatifs.html"><b>Préparatifs</b></a></li>
-            <li><a title="take-off" href="volaller.html"><b>Vol-aller</b></a></li>
-            <li><a title="home" href="hotel.html"><b>Hôtel</b></a></li>
-            <li><a title="tourism" href="visites.html"><b>Visites</b></a></li>
-            <li><a title="landing" href="volretour.html"><b>Vol-retour</b></a></li>
+            <li><a title="Check-list" href="#preparatifs.html"><b>Préparatifs</b></a></li>
+            <li><a title="take-off" href="#volaller.html"><b>Vol-aller</b></a></li>
+            <li><a title="home" href="#hotel.html"><b>Hôtel</b></a></li>
+            <li><a title="tourism" href="#visites.html"><b>Visites</b></a></li>
+            <li><a title="landing" href="#volretour.html"><b>Vol-retour</b></a></li>
         </ul>
         
         <div class="block">
